--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "15.4.2"
   },
   "devDependencies": {
+    "axios": "^0.15.3",
     "react-scripts": "0.9.2"
   },
   "scripts": {
@@ -14,5 +15,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
